--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name">Baron</string>
-
+    <string name="button1_label">Do Something</string>
+    
 </resources>
