portrait only.  screen never dims.  adjust for new arduino cumulative ticks message.  sample action button moves forward only.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">Baron</string>
     <string name="button1_label">Do Something</string>
+    <string name="button2_label">Reset</string>
     
 </resources>
